cmake_minimum_required(VERSION 3.2)
project(fib)

SET (SRC_LIST main.cpp)

include_directories(D:\\vs-code\\vmp_devirt\\release\\vmdevirt\\dependencies\\llvm\\llvm\\include)
include_directories(D:\\vs-code\\vmp_devirt\\release\\vmdevirt\\dependencies\\llvm\\llvm\\lib\\\\Target\\X86)
include_directories(D:\\vs-code\\vmp_devirt\\release\\vmdevirt\\build\\\\dependencies\\llvm\\llvm\\lib\\Target\\X86)
include_directories(D:\\vs-code\\vmp_devirt\\release\\vmdevirt\\build\\\\dependencies\\llvm\\llvm\\include)

LINK_LIBRARIES(D:\\vs-code\\vmp_devirt\\release\\vmdevirt\\build\\dependencies\\llvm\\llvm\\Debug\\lib\\LLVMDemangle.lib)
LINK_LIBRARIES(D:\\vs-code\\vmp_devirt\\release\\vmdevirt\\build\\dependencies\\llvm\\llvm\\Debug\\lib\\LLVMCore.lib)
LINK_LIBRARIES(D:\\vs-code\\vmp_devirt\\release\\vmdevirt\\build\\dependencies\\llvm\\llvm\\Debug\\lib\\LLVMCodeGen.lib)
LINK_LIBRARIES(D:\\vs-code\\vmp_devirt\\release\\vmdevirt\\build\\dependencies\\llvm\\llvm\\Debug\\lib\\LLVMSupport.lib)
LINK_LIBRARIES(D:\\vs-code\\vmp_devirt\\release\\vmdevirt\\build\\dependencies\\llvm\\llvm\\Debug\\lib\\LLVMLinker.lib)
LINK_LIBRARIES(D:\\vs-code\\vmp_devirt\\release\\vmdevirt\\build\\dependencies\\llvm\\llvm\\Debug\\lib\\LLVMX86Desc.lib)
LINK_LIBRARIES(D:\\vs-code\\vmp_devirt\\release\\vmdevirt\\build\\dependencies\\llvm\\llvm\\Debug\\lib\\LLVMX86CodeGen.lib)
LINK_LIBRARIES(D:\\vs-code\\vmp_devirt\\release\\vmdevirt\\build\\dependencies\\llvm\\llvm\\Debug\\lib\\LLVMX86AsmParser.lib)
LINK_LIBRARIES(D:\\vs-code\\vmp_devirt\\release\\vmdevirt\\build\\dependencies\\llvm\\llvm\\Debug\\lib\\LLVMX86Disassembler.lib)
LINK_LIBRARIES(D:\\vs-code\\vmp_devirt\\release\\vmdevirt\\build\\dependencies\\llvm\\llvm\\Debug\\lib\\LLVMX86Info.lib)
LINK_LIBRARIES(D:\\vs-code\\vmp_devirt\\release\\vmdevirt\\build\\dependencies\\llvm\\llvm\\Debug\\lib\\LLVMAsmParser.lib)
LINK_LIBRARIES(D:\\vs-code\\vmp_devirt\\release\\vmdevirt\\build\\dependencies\\llvm\\llvm\\Debug\\lib\\LLVMPasses.lib)
LINK_LIBRARIES(D:\\vs-code\\vmp_devirt\\release\\vmdevirt\\build\\dependencies\\llvm\\llvm\\Debug\\lib\\LLVMAsmPrinter.lib)
LINK_LIBRARIES(D:\\vs-code\\vmp_devirt\\release\\vmdevirt\\build\\dependencies\\llvm\\llvm\\Debug\\lib\\LLVMGlobalISel.lib)
LINK_LIBRARIES(D:\\vs-code\\vmp_devirt\\release\\vmdevirt\\build\\dependencies\\llvm\\llvm\\Debug\\lib\\LLVMSelectionDAG.lib)
LINK_LIBRARIES(D:\\vs-code\\vmp_devirt\\release\\vmdevirt\\build\\dependencies\\llvm\\llvm\\Debug\\lib\\LLVMCFGuard.lib)
LINK_LIBRARIES(D:\\vs-code\\vmp_devirt\\release\\vmdevirt\\build\\dependencies\\llvm\\llvm\\Debug\\lib\\LLVMMCDisassembler.lib)
LINK_LIBRARIES(D:\\vs-code\\vmp_devirt\\release\\vmdevirt\\build\\dependencies\\llvm\\llvm\\Debug\\lib\\LLVMTarget.lib)
LINK_LIBRARIES(D:\\vs-code\\vmp_devirt\\release\\vmdevirt\\build\\dependencies\\llvm\\llvm\\Debug\\lib\\LLVMCoroutines.lib)
LINK_LIBRARIES(D:\\vs-code\\vmp_devirt\\release\\vmdevirt\\build\\dependencies\\llvm\\llvm\\Debug\\lib\\LLVMipo.lib)
LINK_LIBRARIES(D:\\vs-code\\vmp_devirt\\release\\vmdevirt\\build\\dependencies\\llvm\\llvm\\Debug\\lib\\LLVMBitWriter.lib)
LINK_LIBRARIES(D:\\vs-code\\vmp_devirt\\release\\vmdevirt\\build\\dependencies\\llvm\\llvm\\Debug\\lib\\LLVMInstrumentation.lib)
LINK_LIBRARIES(D:\\vs-code\\vmp_devirt\\release\\vmdevirt\\build\\dependencies\\llvm\\llvm\\Debug\\lib\\LLVMFrontendOpenMP.lib)
LINK_LIBRARIES(D:\\vs-code\\vmp_devirt\\release\\vmdevirt\\build\\dependencies\\llvm\\llvm\\Debug\\lib\\LLVMScalarOpts.lib)
LINK_LIBRARIES(D:\\vs-code\\vmp_devirt\\release\\vmdevirt\\build\\dependencies\\llvm\\llvm\\Debug\\lib\\LLVMAggressiveInstCombine.lib)
LINK_LIBRARIES(D:\\vs-code\\vmp_devirt\\release\\vmdevirt\\build\\dependencies\\llvm\\llvm\\Debug\\lib\\LLVMIRReader.lib)
LINK_LIBRARIES(D:\\vs-code\\vmp_devirt\\release\\vmdevirt\\build\\dependencies\\llvm\\llvm\\Debug\\lib\\LLVMInstCombine.lib)
LINK_LIBRARIES(D:\\vs-code\\vmp_devirt\\release\\vmdevirt\\build\\dependencies\\llvm\\llvm\\Debug\\lib\\LLVMObjCARCOpts.lib)
LINK_LIBRARIES(D:\\vs-code\\vmp_devirt\\release\\vmdevirt\\build\\dependencies\\llvm\\llvm\\Debug\\lib\\LLVMVectorize.lib)
LINK_LIBRARIES(D:\\vs-code\\vmp_devirt\\release\\vmdevirt\\build\\dependencies\\llvm\\llvm\\Debug\\lib\\LLVMTransformUtils.lib)
LINK_LIBRARIES(D:\\vs-code\\vmp_devirt\\release\\vmdevirt\\build\\dependencies\\llvm\\llvm\\Debug\\lib\\LLVMAnalysis.lib)
LINK_LIBRARIES(D:\\vs-code\\vmp_devirt\\release\\vmdevirt\\build\\dependencies\\llvm\\llvm\\Debug\\lib\\LLVMProfileData.lib)
LINK_LIBRARIES(D:\\vs-code\\vmp_devirt\\release\\vmdevirt\\build\\dependencies\\llvm\\llvm\\Debug\\lib\\LLVMSymbolize.lib)
LINK_LIBRARIES(D:\\vs-code\\vmp_devirt\\release\\vmdevirt\\build\\dependencies\\llvm\\llvm\\Debug\\lib\\LLVMDebugInfoPDB.lib)
LINK_LIBRARIES(D:\\vs-code\\vmp_devirt\\release\\vmdevirt\\build\\dependencies\\llvm\\llvm\\Debug\\lib\\LLVMDebugInfoMSF.lib)
LINK_LIBRARIES(D:\\vs-code\\vmp_devirt\\release\\vmdevirt\\build\\dependencies\\llvm\\llvm\\Debug\\lib\\LLVMDebugInfoDWARF.lib)
LINK_LIBRARIES(D:\\vs-code\\vmp_devirt\\release\\vmdevirt\\build\\dependencies\\llvm\\llvm\\Debug\\lib\\LLVMObject.lib)
LINK_LIBRARIES(D:\\vs-code\\vmp_devirt\\release\\vmdevirt\\build\\dependencies\\llvm\\llvm\\Debug\\lib\\LLVMBitReader.lib)
LINK_LIBRARIES(D:\\vs-code\\vmp_devirt\\release\\vmdevirt\\build\\dependencies\\llvm\\llvm\\Debug\\lib\\LLVMRemarks.lib)
LINK_LIBRARIES(D:\\vs-code\\vmp_devirt\\release\\vmdevirt\\build\\dependencies\\llvm\\llvm\\Debug\\lib\\LLVMBitstreamReader.lib)
LINK_LIBRARIES(D:\\vs-code\\vmp_devirt\\release\\vmdevirt\\build\\dependencies\\llvm\\llvm\\Debug\\lib\\LLVMMCParser.lib)
LINK_LIBRARIES(D:\\vs-code\\vmp_devirt\\release\\vmdevirt\\build\\dependencies\\llvm\\llvm\\Debug\\lib\\LLVMMC.lib)
LINK_LIBRARIES(D:\\vs-code\\vmp_devirt\\release\\vmdevirt\\build\\dependencies\\llvm\\llvm\\Debug\\lib\\LLVMDebugInfoCodeView.lib)
LINK_LIBRARIES(D:\\vs-code\\vmp_devirt\\release\\vmdevirt\\build\\dependencies\\llvm\\llvm\\Debug\\lib\\LLVMTextAPI.lib)
LINK_LIBRARIES(D:\\vs-code\\vmp_devirt\\release\\vmdevirt\\build\\dependencies\\llvm\\llvm\\Debug\\lib\\LLVMBinaryFormat.lib)

ADD_EXECUTABLE (fib ${SRC_LIST})